# MXCC

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  tester_main.cpp  xmake.lua
doc/: doc_index.md  object.md
doc/coding/: huffman.md
doc/io/: logger.md
doc/math/: math.md
orther/: .clang-format  code_style.md
utl/: CMakeLists.txt  MXC.hpp  MXCC.hpp  String.hpp  StringUtl.hpp  _builtin_exception.hpp  _config.hpp  _object.hpp  xmake.lua
utl/String/: CMakeLists.txt  String.hpp  StringUtl.hpp
utl/String/tester/: CMakeLists.txt  StringUtlTestMain.cpp
utl/algorithm/: CMakeLists.txt  Sorter.hpp  _sorter_base.hpp
utl/coding/: CMakeLists.txt  huffman.hpp
utl/coding/test/huffman_test/: CMakeLists.txt  huffman_test.cpp
utl/container/: ArrayList.hpp  CMakeLists.txt  HashMap.hpp  IList.hpp  JumpList.hpp  LinkedList.hpp  OrderedVector.hpp  Vector.hpp
utl/container/test/Vector_test/: CMakeLists.txt  tester.cpp
utl/io/: CMakeLists.txt  csv.hpp  logger.hpp
utl/io/test/: csv_test.cpp  csv_tester.csv  logger_test.cpp
utl/io/test/csv_test/: CMakeLists.txt  csv_test.cpp  csv_tester.csv
utl/io/test/logger_test/: CMakeLists.txt  logger_test.cpp
utl/math/: CMakeLists.txt  _math_config.h  karatsuba_multiplication.hpp  math.hpp  statistics.hpp
utl/math/linear/: linearspace.hpp
